--- a/public/cloud.html
+++ b/public/cloud.html
@@ -1,3 +1,3 @@
-<div ng-controller="cloudController">
-  <word-cloud></word-cloud>
+<div ng-controller="CloudController" class="wordcloud-vis">
+  <word-cloud data="data" options="options"></word-cloud>
 </div>
