switching from pts to pxs

--- a/public/cloud_vis_params.html
+++ b/public/cloud_vis_params.html
@@ -26,10 +26,10 @@
     </select>
   </div>
 
-  <label>Minimum Font Size - {{ vis.params.minFontSize }}pt</label>
+  <label>Minimum Font Size - {{ vis.params.minFontSize }}px</label>
   <input type="range" ng-model="vis.params.minFontSize" class="form-control" min="12" max="120">
 
-  <label>Maximum Font Size - {{ vis.params.maxFontSize }}pt</label>
+  <label>Maximum Font Size - {{ vis.params.maxFontSize }}px</label>
   <input type="range" ng-model="vis.params.maxFontSize" class="form-control" min="12" max="120">
 
   <label>Rotate - {{ vis.params.rotate}} degrees</label>
