--- a/public/cloud.html
+++ b/public/cloud.html
@@ -1,3 +1,3 @@
-<div ng-controller="CloudController" class="wordcloud-vis">
-  <word-cloud data="data" options="vis.params" events="events"></word-cloud>
+<div ng-controller="CloudController" class="tagcloud-vis">
+  <tag-cloud data="data" options="vis.params" eventListeners="eventListeners"></tag-cloud>
 </div>
