--- a/public/cloud_vis_params.html
+++ b/public/cloud_vis_params.html
@@ -35,14 +35,20 @@
     </select>
   </div>
 
+  <label>Number of orientations</label>
+  <input type="number" ng-model="vis.params.orientations" class="form-control">
+
+  <label>Minimum orientation angle - {{ vis.params.fromDegree }} degrees</label>
+  <input type="range" ng-model="vis.params.fromDegree" class="form-control" min="-90" max="90">
+
+  <label>Maximum orientation angle - {{ vis.params.toDegree }} degrees</label>
+  <input type="range" ng-model="vis.params.toDegree" class="form-control" min="-90" max="90">
+
   <label>Minimum Font Size - {{ vis.params.minFontSize }}px</label>
   <input type="range" ng-model="vis.params.minFontSize" class="form-control" min="12" max="120">
 
   <label>Maximum Font Size - {{ vis.params.maxFontSize }}px</label>
   <input type="range" ng-model="vis.params.maxFontSize" class="form-control" min="12" max="120">
-
-  <label>Rotate - {{ vis.params.rotate}} degrees</label>
-  <input type="range" ng-model="vis.params.rotate" class="form-control" min="-90" max="90">
 
   <label>Time Interval - {{ vis.params.timeInterval }}ms</label>
   <input type="range" ng-model="vis.params.timeInterval" class="form-control" min="100" max="2000">
